--- a/invoiceSummary2.html
+++ b/invoiceSummary2.html
@@ -18,8 +18,8 @@
   <link rel="stylesheet" href="src/css/invoiceSummary2.css">
   <style>
     .stat-card.updated {
-      background: linear-gradient(135deg, #4f46e5 0%, #6366f1 100%);
-      color: white;
+      background: linear-gradient(135deg, #4f46e5 0%, #6366f1 100%) !important;
+      color: white !important;
       border-radius: 8px;
       padding: 0.75rem;
       position: relative;
@@ -38,12 +38,14 @@
       background: linear-gradient(135deg, rgba(255, 255, 255, 0.15) 0%, rgba(255, 255, 255, 0.05) 100%);
       opacity: 0;
       transition: opacity 0.3s ease;
+      pointer-events: none;
+      z-index: 1;
     }
 
     .stat-card.updated:hover {
       transform: translateY(-4px);
       box-shadow: 0 12px 20px -8px rgba(79, 70, 229, 0.3), 0 4px 8px -4px rgba(79, 70, 229, 0.2);
-      background: linear-gradient(135deg, #4338ca 0%, #4f46e5 100%);
+      background: linear-gradient(135deg, #4338ca 0%, #4f46e5 100%) !important;
     }
 
     .stat-card.updated:hover::before {
@@ -62,8 +64,8 @@
     }
 
     .stat-card.updated:hover .updated-badge {
-      background: rgba(255, 255, 255, 0.2);
       transform: translateY(-1px);
+      box-shadow: 0 4px 6px rgba(16, 185, 129, 0.3);
     }
 
     .stat-card.updated:hover .amount-label {
@@ -75,11 +77,175 @@
       text-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
     }
 
+    /* List View Styles */
+    .view-list .stat-card.updated {
+      display: grid;
+      grid-template-columns: 200px 1fr;
+      gap: 1rem;
+      padding: 1rem;
+      min-height: auto;
+      background: linear-gradient(135deg, #4f46e5 0%, #6366f1 100%) !important;
+      border-radius: 8px;
+    }
+
+    .view-list .stat-card.updated .card-header {
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
+      padding: 0.75rem;
+      background: rgba(255, 255, 255, 0.1);
+      border-radius: 6px;
+      border: 1px solid rgba(255, 255, 255, 0.15);
+    }
+
+    .view-list .stat-card.updated .card-icon {
+      width: 32px;
+      height: 32px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: rgba(255, 255, 255, 0.15);
+      border-radius: 6px;
+      font-size: 1rem;
+    }
+
+    .view-list .stat-card.updated .card-title {
+      font-size: 0.875rem;
+      font-weight: 600;
+      color: white;
+    }
+
+    .view-list .stat-card.updated .card-content {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 1rem;
+    }
+
+    .view-list .stat-card.updated .amount-section {
+      display: contents;
+    }
+
+    .view-list .stat-card.updated .original-amount {
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
+      padding: 0.75rem;
+      background: rgba(255, 255, 255, 0.15) !important;
+      border-radius: 6px;
+      border: 1px solid rgba(255, 255, 255, 0.15);
+    }
+
+    .view-list .stat-card.updated .updated-amount {
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
+      padding: 0.75rem;
+      background: rgba(255, 255, 255, 0.2) !important;
+      border-radius: 6px;
+      border: 1px solid rgba(255, 255, 255, 0.2);
+    }
+
+    .view-list .stat-card.updated .updated-header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 0.75rem;
+      padding-bottom: 0.5rem;
+      border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    }
+
+    .view-list .stat-card.updated .updated-badge {
+      display: inline-flex;
+      align-items: center;
+      gap: 0.25rem;
+      padding: 0.25rem 0.5rem;
+      background: linear-gradient(135deg, #34d399 0%, #10b981 100%);
+      border-radius: 4px;
+      font-size: 0.75rem;
+      font-weight: 600;
+      color: white;
+    }
+
+    .view-list .stat-card.updated .card-percentage {
+      padding: 0.25rem 0.5rem;
+      background: linear-gradient(135deg, #f59e0b 0%, #d97706 100%);
+      border-radius: 4px;
+      font-size: 0.75rem;
+      font-weight: 700;
+      color: white;
+    }
+
+    .view-list .stat-card.updated .amount-label {
+      font-size: 0.75rem;
+      font-weight: 500;
+      color: rgba(255, 255, 255, 0.9);
+      text-transform: uppercase;
+      letter-spacing: 0.02em;
+    }
+
+    .view-list .stat-card.updated .amount-value {
+      font-size: 1.25rem;
+      font-weight: 700;
+      font-family: 'Roboto Mono', monospace;
+      color: white;
+    }
+
+    .view-list .stat-card.updated .adjustment {
+      font-size: 0.875rem;
+      font-weight: 600;
+      font-family: 'Roboto Mono', monospace;
+      color: rgba(255, 255, 255, 0.95);
+    }
+
+    .view-list .stat-card.updated .adjustment.negative {
+      color: #fecaca;
+    }
+
+    .view-list .stat-card.updated:hover {
+      transform: translateX(4px);
+      background: linear-gradient(135deg, #4338ca 0%, #4f46e5 100%) !important;
+      box-shadow: 0 4px 8px rgba(79, 70, 229, 0.2);
+    }
+
+    .view-list .stat-card.updated:hover .card-header {
+      background: rgba(255, 255, 255, 0.15);
+    }
+
+    .view-list .stat-card.updated:hover .original-amount {
+      background: rgba(255, 255, 255, 0.2) !important;
+      border-color: rgba(255, 255, 255, 0.25);
+    }
+
+    .view-list .stat-card.updated:hover .updated-amount {
+      background: rgba(255, 255, 255, 0.25) !important;
+      border-color: rgba(255, 255, 255, 0.3);
+    }
+
+    /* Responsive adjustments */
+    @media (max-width: 1200px) {
+      .view-list .stat-card.updated {
+        grid-template-columns: 1fr;
+        gap: 1rem;
+      }
+
+      .view-list .stat-card.updated .card-content {
+        grid-template-columns: 1fr;
+      }
+
+      .view-list .stat-card.updated .card-header {
+        flex-direction: row;
+        align-items: center;
+        justify-content: flex-start;
+        gap: 0.75rem;
+      }
+    }
+
     .stat-card.updated .card-header {
       display: flex;
       align-items: center;
       gap: 0.35rem;
       margin-bottom: 0.5rem;
+      position: relative;
     }
 
     .stat-card.updated .card-icon {
@@ -101,14 +267,94 @@
       flex-grow: 1;
       letter-spacing: 0.01em;
       color: rgba(255, 255, 255, 0.95);
+      padding-right: 0.5rem;
     }
 
-    .stat-card.updated .card-percentage {
-      background: rgba(255, 255, 255, 0.15);
-      padding: 0.1rem 0.4rem;
+    .stat-card.updated .updated-amount {
+      display: flex;
+      flex-direction: column;
+      gap: 0.25rem;
+      padding: 0.35rem 0.4rem;
+      background: linear-gradient(135deg, rgba(255, 255, 255, 0.25) 0%, rgba(255, 255, 255, 0.15) 100%);
+      border-radius: 4px;
+      position: relative;
+      border: 1px solid rgba(255, 255, 255, 0.2);
+    }
+
+    .stat-card.updated .updated-header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-bottom: 0.15rem;
+    }
+
+    .stat-card.updated .updated-badge {
+      display: inline-flex;
+      align-items: center;
+      gap: 0.25rem;
+      background: linear-gradient(135deg, #34d399 0%, #10b981 100%);
+      padding: 0.15rem 0.5rem;
       border-radius: 10px;
       font-size: 0.6875rem;
       font-weight: 600;
+      width: fit-content;
+      text-transform: uppercase;
+      letter-spacing: 0.02em;
+      color: white;
+      transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+      box-shadow: 0 2px 4px rgba(16, 185, 129, 0.2);
+    }
+
+    .stat-card.updated .updated-badge i {
+      color: white;
+      font-size: 0.75rem;
+      filter: drop-shadow(0 1px 1px rgba(0, 0, 0, 0.1));
+    }
+
+    .stat-card.updated .card-percentage {
+      background: linear-gradient(135deg, #f59e0b 0%, #d97706 100%);
+      padding: 0.15rem 0.5rem;
+      border-radius: 12px;
+      font-size: 0.75rem;
+      font-weight: 700;
+      color: white;
+      display: flex;
+      align-items: center;
+      gap: 0.25rem;
+      position: relative;
+      overflow: hidden;
+      box-shadow: 0 2px 4px rgba(217, 119, 6, 0.2);
+    }
+
+    .stat-card.updated .card-percentage::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: linear-gradient(90deg, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0) 100%);
+      opacity: 0.5;
+    }
+
+    .stat-card.updated .card-percentage::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 2px;
+      height: 100%;
+      background: rgba(255, 255, 255, 0.5);
+    }
+
+    .stat-card.updated:hover .updated-badge {
+      transform: translateY(-1px);
+      box-shadow: 0 4px 6px rgba(16, 185, 129, 0.3);
+    }
+
+    .stat-card.updated:hover .card-percentage {
+      transform: translateY(-1px);
+      box-shadow: 0 4px 6px rgba(217, 119, 6, 0.3);
     }
 
     .stat-card.updated .amount-section {
@@ -142,37 +388,6 @@
       color: rgba(255, 255, 255, 0.95);
       text-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
       transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-    }
-
-    .stat-card.updated .updated-amount {
-      display: flex;
-      flex-direction: column;
-      gap: 0.25rem;
-      padding: 0.35rem 0.4rem;
-      background: rgba(255, 255, 255, 0.2);
-      border-radius: 4px;
-    }
-
-    .stat-card.updated .updated-badge {
-      display: inline-flex;
-      align-items: center;
-      gap: 0.25rem;
-      background: rgba(255, 255, 255, 0.15);
-      padding: 0.1rem 0.4rem;
-      border-radius: 10px;
-      font-size: 0.6875rem;
-      font-weight: 600;
-      width: fit-content;
-      text-transform: uppercase;
-      letter-spacing: 0.02em;
-      color: white;
-      transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-    }
-
-    .stat-card.updated .updated-badge i {
-      color: #34d399;
-      font-size: 0.75rem;
-      filter: drop-shadow(0 1px 1px rgba(0, 0, 0, 0.1));
     }
 
     .stat-card.updated .adjustment {
@@ -458,7 +673,6 @@
                         <i class="bi bi-cash-coin"></i>
                       </div>
                       <div class="card-title">InScope Charges</div>
-                      <div class="card-percentage">61.5%</div>
                     </div>
                     <div class="card-content">
                       <div class="amount-section">
@@ -467,9 +681,12 @@
                           <span class="amount-value">$2,752,670</span>
                         </div>
                         <div class="updated-amount">
-                          <div class="updated-badge">
-                            <i class="bi bi-check-circle-fill"></i>
-                            <span>Updated</span>
+                          <div class="updated-header">
+                            <div class="updated-badge">
+                              <i class="bi bi-check-circle-fill"></i>
+                              <span>Updated</span>
+                            </div>
+                            <div class="card-percentage">61.5%</div>
                           </div>
                           <span class="amount-value">$2,710,870</span>
                           <span class="adjustment negative">-$41,800</span>
