feat(shop): add tooltip to view details button for enhanced user guidance
- Implement data attributes for tooltips on the "View Details" buttons in the shop section, providing users with additional context about the action.
- Ensure consistent user experience across multiple instances of the button by applying the tooltip feature uniformly.

--- a/shop.html
+++ b/shop.html
@@ -406,7 +406,7 @@
                           </div>
                         </td>
                         <td>
-                          <a href="#" class="view-details-btn">
+                          <a href="#" class="view-details-btn" data-bs-toggle="tooltip" data-bs-title="View detailed information about this shop">
                             <i class="bi bi-arrow-right-circle"></i>
                             View Details
                           </a>
@@ -485,7 +485,7 @@
                           </div>
                         </td>
                         <td>
-                          <a href="#" class="view-details-btn">
+                          <a href="#" class="view-details-btn" data-bs-toggle="tooltip" data-bs-title="View detailed information about this shop">
                             <i class="bi bi-arrow-right-circle"></i>
                             View Details
                           </a>
@@ -528,7 +528,7 @@
                           </div>
                         </td>
                         <td>
-                          <a href="#" class="view-details-btn">
+                          <a href="#" class="view-details-btn" data-bs-toggle="tooltip" data-bs-title="View detailed information about this shop">
                             <i class="bi bi-arrow-right-circle"></i>
                             View Details
                           </a>
@@ -571,7 +571,7 @@
                           </div>
                         </td>
                         <td>
-                          <a href="#" class="view-details-btn">
+                          <a href="#" class="view-details-btn" data-bs-toggle="tooltip" data-bs-title="View detailed information about this shop">
                             <i class="bi bi-arrow-right-circle"></i>
                             View Details
                           </a>
