style(invoiceSummary2): update invoice summary table layout and add cost details
- Adjust column widths in the invoice summary table for better readability.
- Add new cost details for various items, including recommended costs and final costs, enhancing the clarity of financial information.
- Update the total row to reflect the new calculations, ensuring accurate representation of the invoice summary.

--- a/invoiceSummary2.html
+++ b/invoiceSummary2.html
@@ -1001,11 +1001,13 @@
 
                   <table>
                     <colgroup>
-                      <col style="width: 80%">
+                      <col style="width: 60%">
+                      <col style="width: 20%">
                       <col style="width: 20%">
                     </colgroup>
                     <tr>
                       <th>T&M MFP</th>
+                      <th class="right">Recommended Cost (USD)</th>
                       <th class="right">Final Cost (USD)</th>
                     </tr>
                     <tr>
@@ -1015,26 +1017,32 @@
                           <i class="bi bi-arrow-right"></i>
                         </a>
                       </td>
+                      <td class="right amount">$2,710,870</td>
                       <td class="right amount">--</td>
                     </tr>
                     <tr>
                       <td>Out-Of-Scope LLPs Replacement</td>
+                      <td class="right amount">$1,632,712</td>
                       <td class="right amount">--</td>
                     </tr>
                     <tr>
                       <td>Out-Of Scope QEC & LRU Replacement</td>
+                      <td class="right amount">$16,780</td>
                       <td class="right amount">--</td>
                     </tr>
                     <tr>
                       <td>Out-of-Scope Material & Repair</td>
                       <td class="right amount">--</td>
+                      <td class="right amount">--</td>
                     </tr>
                     <tr>
                       <td>Out-of-Scope PMA & DER</td>
                       <td class="right amount">--</td>
+                      <td class="right amount">--</td>
                     </tr>
                     <tr>
                       <td>Out-Of Scope Missing Items</td>
+                      <td class="right amount">$247</td>
                       <td class="right amount">--</td>
                     </tr>
                     <tr>
@@ -1044,26 +1052,31 @@
                           <i class="bi bi-arrow-right"></i>
                         </a>
                       </td>
+                      <td class="right amount">$60,914</td>
                       <td class="right amount">--</td>
                     </tr>
                     <tr>
                       <td>Stand repair</td>
+                      <td class="right amount">$1,000</td>
                       <td class="right amount">$427.00</td>
                     </tr>
                     <tr>
                       <td>Excluded Material Transportation</td>
+                      <td class="right amount">$7,877</td>
                       <td class="right amount">--</td>
                     </tr>
                     <tr>
                       <td>Taxes</td>
                       <td class="right amount">--</td>
+                      <td class="right amount">--</td>
                     </tr>
                     <tr>
                       <td>TAT remedy</td>
+                      <td class="right amount">$0</td>
                       <td class="right amount negative">- $3,000.00</td>
                     </tr>
                     <tr>
-                      <td colspan="2">
+                      <td colspan="3">
                         <div class="status-badge">
                           Delivered: 12-Nov-24 | Redelivered: 09-Feb-25 | Hold Days: 0
                         </div>
@@ -1071,6 +1084,7 @@
                     </tr>
                     <tr class="total-row">
                       <td>Total</td>
+                      <td class="right amount">$4,429,400</td>
                       <td class="right amount">--</td>
                     </tr>
                   </table>
