--- a/invoiceSummary2.html
+++ b/invoiceSummary2.html
@@ -431,6 +431,10 @@
       flex-direction: row;
     }
 
+    .list-view .stat-card.updated .card-percentage{
+      margin-left: 0.25rem;
+    }
+
   </style>
 </head>
 
