feat(invoiceSummary2): add proceed button for navigating to revised invoice
- Introduce a new "Proceed with Changes" button in the invoice summary, allowing users to navigate to the revised invoice page.
- Enhance button styling with a gradient background, hover effects, and improved layout for better user experience.

--- a/invoiceSummary2.html
+++ b/invoiceSummary2.html
@@ -1131,6 +1131,31 @@
         </div>
       </section>
 
+      <!-- Proceed Button -->
+      <div class="container-fluid mt-4 mb-4">
+        <div class="d-flex justify-content-end">
+          <a href="revisedInvoice.html" class="btn btn-primary" style="
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            padding: 0.75rem 1.5rem;
+            font-weight: 500;
+            font-size: 0.875rem;
+            background: linear-gradient(135deg, #4f46e5 0%, #6366f1 100%);
+            border: none;
+            box-shadow: 0 2px 4px rgba(99, 102, 241, 0.2);
+            transition: all 0.3s ease;
+            position: relative;
+            overflow: hidden;
+            text-decoration: none;
+            color: white;
+          " onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 4px 8px rgba(99, 102, 241, 0.3)';" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 2px 4px rgba(99, 102, 241, 0.2)';">
+            <i class="bi bi-check-circle"></i>
+            <span>Proceed with Changes</span>
+          </a>
+        </div>
+      </div>
+
       <!-- Invoice Review Section -->
       <div id="invoiceReviewSection" class="invoice-review-section">
         <div class="review-container">
