style(partLevel): enhance table responsiveness and update styles for improved layout
- Change table class to include 'table-hover' for better interactivity.
- Introduce 'table-responsive-xl' for improved responsiveness on larger screens.
- Adjust padding and column widths in CSS for better readability and layout consistency.
- Implement custom scrollbar styles for enhanced user experience.

--- a/partLevel.html
+++ b/partLevel.html
@@ -210,8 +210,8 @@
         <div class="tab-content" id="partsTabContent">
           <!-- All Parts Table -->
           <div class="tab-pane fade show active" id="all-table" role="tabpanel" aria-labelledby="all-tab">
-          <div class="table-responsive">
-              <table class="dashboard-table table-sm">
+            <div class="table-responsive-xl">
+              <table class="dashboard-table table table-sm table-hover">
               <thead>
                 <tr>
                   <th width="40"><input type="checkbox" id="selectAllInvoices" class="form-check-input"></th>
@@ -237,8 +237,8 @@
 
           <!-- Engine Parts Table -->
           <div class="tab-pane fade" id="engine-table" role="tabpanel" aria-labelledby="engine-tab">
-            <div class="table-responsive">
-              <table class="dashboard-table table-sm">
+            <div class="table-responsive-xl">
+              <table class="dashboard-table table table-sm table-hover">
                 <thead>
                 <tr>
                     <th width="40"><input type="checkbox" class="form-check-input"></th>
@@ -264,8 +264,8 @@
 
           <!-- Transmission Table -->
           <div class="tab-pane fade" id="transmission-table" role="tabpanel" aria-labelledby="transmission-tab">
-            <div class="table-responsive">
-              <table class="dashboard-table table-sm">
+            <div class="table-responsive-xl">
+              <table class="dashboard-table table table-sm table-hover">
                 <thead>
                   <tr>
                     <th width="40"><input type="checkbox" class="form-check-input"></th>
@@ -291,8 +291,8 @@
 
           <!-- Electrical Table -->
           <div class="tab-pane fade" id="electrical-table" role="tabpanel" aria-labelledby="electrical-tab">
-            <div class="table-responsive">
-              <table class="dashboard-table table-sm">
+            <div class="table-responsive-xl">
+              <table class="dashboard-table table table-sm table-hover">
                 <thead>
                   <tr>
                     <th width="40"><input type="checkbox" class="form-check-input"></th>
@@ -318,8 +318,8 @@
 
           <!-- Body Parts Table -->
           <div class="tab-pane fade" id="body-table" role="tabpanel" aria-labelledby="body-tab">
-            <div class="table-responsive">
-              <table class="dashboard-table table-sm">
+            <div class="table-responsive-xl">
+              <table class="dashboard-table table table-sm table-hover">
                 <thead>
                   <tr>
                     <th width="40"><input type="checkbox" class="form-check-input"></th>
