--- a/invoiceSummary.html
+++ b/invoiceSummary.html
@@ -224,6 +224,20 @@
           <div class="loader-text">
             <h3>Processing Invoice</h3>
             <p>Analyzing document for insights and recommendations...</p>
+            <div class="processing-details">
+              <div class="detail-item">
+                <i class="bi bi-clock-history"></i>
+                <span>Estimated time remaining: <strong>25s</strong></span>
+              </div>
+              <div class="detail-item">
+                <i class="bi bi-cpu"></i>
+                <span>Processing speed: <strong>2.5 MB/s</strong></span>
+              </div>
+              <div class="detail-item">
+                <i class="bi bi-memory"></i>
+                <span>Memory usage: <strong>45%</strong></span>
+              </div>
+            </div>
           </div>
           <div class="loader-progress">
             <div class="progress-track">
@@ -236,16 +250,18 @@
                 </div>
                 <div class="step-content">
                   <span class="step-label">Upload</span>
-                  <span class="step-status">In Progress</span>
+                  <span class="step-status">Completed</span>
+                  <span class="step-time">2s</span>
                 </div>
               </div>
-              <div class="step">
+              <div class="step active">
                 <div class="step-icon">
                   <i class="bi bi-gear"></i>
                 </div>
                 <div class="step-content">
                   <span class="step-label">Process</span>
-                  <span class="step-status">Pending</span>
+                  <span class="step-status">In Progress</span>
+                  <span class="step-time">15s</span>
                 </div>
               </div>
               <div class="step">
@@ -255,6 +271,7 @@
                 <div class="step-content">
                   <span class="step-label">Analyze</span>
                   <span class="step-status">Pending</span>
+                  <span class="step-time">8s</span>
                 </div>
               </div>
               <div class="step">
@@ -264,18 +281,39 @@
                 <div class="step-content">
                   <span class="step-label">Complete</span>
                   <span class="step-status">Pending</span>
+                  <span class="step-time">5s</span>
                 </div>
               </div>
             </div>
           </div>
           <div class="loader-status">
-            <div class="status-item">
-              <i class="bi bi-clock"></i>
-              <span>30s</span>
+            <div class="status-group">
+              <div class="status-item">
+                <i class="bi bi-clock"></i>
+                <span>25s</span>
+              </div>
+              <div class="status-item">
+                <i class="bi bi-shield-check"></i>
+                <span>Secure</span>
+              </div>
+              <div class="status-item">
+                <i class="bi bi-cpu"></i>
+                <span>AI Processing</span>
+              </div>
             </div>
-            <div class="status-item">
-              <i class="bi bi-shield-check"></i>
-              <span>Secure</span>
+            <div class="processing-metrics">
+              <div class="metric">
+                <div class="metric-label">Document Size</div>
+                <div class="metric-value">2.4 MB</div>
+              </div>
+              <div class="metric">
+                <div class="metric-label">Pages Processed</div>
+                <div class="metric-value">3/5</div>
+              </div>
+              <div class="metric">
+                <div class="metric-label">Confidence Score</div>
+                <div class="metric-value">92%</div>
+              </div>
             </div>
           </div>
         </div>
