feat(invoiceSummary): redesign loader with enhanced visuals and metrics
- Revamp loader section to include a circular progress indicator and detailed processing metrics.
- Update loader styles for improved aesthetics, including a new header, body, and footer layout.
- Introduce responsive design adjustments for better usability on smaller screens.
- Remove outdated elements and streamline the loader's information display for clarity.

--- a/invoiceSummary.html
+++ b/invoiceSummary.html
@@ -215,43 +215,46 @@
       <!-- Loader Section -->
       <div id="loaderSection" class="loader-section">
         <div class="loader-content">
-          <div class="loader-icon">
-            <div class="icon-wrapper">
-              <i class="bi bi-file-text"></i>
-              <div class="icon-pulse"></div>
+          <div class="loader-header">
+            <div class="loader-text">
+              <h3>Processing Invoice</h3>
+              <p>Analyzing document for insights...</p>
             </div>
           </div>
-          <div class="loader-text">
-            <h3>Processing Invoice</h3>
-            <p>Analyzing document for insights and recommendations...</p>
-            <div class="processing-details">
-              <div class="detail-item">
-                <i class="bi bi-clock-history"></i>
-                <span>Estimated time remaining: <strong>25s</strong></span>
-              </div>
-              <div class="detail-item">
-                <i class="bi bi-cpu"></i>
-                <span>Processing speed: <strong>2.5 MB/s</strong></span>
-              </div>
-              <div class="detail-item">
-                <i class="bi bi-memory"></i>
-                <span>Memory usage: <strong>45%</strong></span>
+
+          <div class="loader-body">
+            <div class="circular-progress">
+              <svg class="progress-ring" width="80" height="80">
+                <defs>
+                  <linearGradient id="progress-gradient" x1="0%" y1="0%" x2="100%" y2="0%">
+                    <stop offset="0%" style="stop-color: #4f46e5" />
+                    <stop offset="100%" style="stop-color: #6366f1" />
+                  </linearGradient>
+                </defs>
+                <circle class="progress-ring-circle-bg" cx="40" cy="40" r="36" />
+                <circle class="progress-ring-circle" cx="40" cy="40" r="36" />
+                <text x="40" y="40" class="progress-text">45%</text>
+              </svg>
+              <div class="progress-stats">
+                <div class="stat-item">
+                  <span class="stat-value">25s</span>
+                  <span class="stat-label">Remaining</span>
+                </div>
+                <div class="stat-item">
+                  <span class="stat-value">2.5 MB/s</span>
+                  <span class="stat-label">Speed</span>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="loader-progress">
-            <div class="progress-track">
-              <div class="progress-fill"></div>
-            </div>
-            <div class="progress-steps">
-              <div class="step active">
+
+            <div class="processing-steps">
+              <div class="step active completed">
                 <div class="step-icon">
                   <i class="bi bi-cloud-arrow-up"></i>
                 </div>
                 <div class="step-content">
                   <span class="step-label">Upload</span>
                   <span class="step-status">Completed</span>
-                  <span class="step-time">2s</span>
                 </div>
               </div>
               <div class="step active">
@@ -261,7 +264,6 @@
                 <div class="step-content">
                   <span class="step-label">Process</span>
                   <span class="step-status">In Progress</span>
-                  <span class="step-time">15s</span>
                 </div>
               </div>
               <div class="step">
@@ -271,7 +273,6 @@
                 <div class="step-content">
                   <span class="step-label">Analyze</span>
                   <span class="step-status">Pending</span>
-                  <span class="step-time">8s</span>
                 </div>
               </div>
               <div class="step">
@@ -281,38 +282,39 @@
                 <div class="step-content">
                   <span class="step-label">Complete</span>
                   <span class="step-status">Pending</span>
-                  <span class="step-time">5s</span>
                 </div>
               </div>
             </div>
           </div>
-          <div class="loader-status">
-            <div class="status-group">
-              <div class="status-item">
-                <i class="bi bi-clock"></i>
-                <span>25s</span>
+
+          <div class="loader-footer">
+            <div class="metrics-grid">
+              <div class="metric-card">
+                <div class="metric-icon">
+                  <i class="bi bi-file-earmark-text"></i>
+                </div>
+                <div class="metric-info">
+                  <span class="metric-value">2.4 MB</span>
+                  <span class="metric-label">Size</span>
+                </div>
               </div>
-              <div class="status-item">
-                <i class="bi bi-shield-check"></i>
-                <span>Secure</span>
+              <div class="metric-card">
+                <div class="metric-icon">
+                  <i class="bi bi-file-earmark"></i>
+                </div>
+                <div class="metric-info">
+                  <span class="metric-value">3/5</span>
+                  <span class="metric-label">Pages</span>
+                </div>
               </div>
-              <div class="status-item">
-                <i class="bi bi-cpu"></i>
-                <span>AI Processing</span>
-              </div>
-            </div>
-            <div class="processing-metrics">
-              <div class="metric">
-                <div class="metric-label">Document Size</div>
-                <div class="metric-value">2.4 MB</div>
-              </div>
-              <div class="metric">
-                <div class="metric-label">Pages Processed</div>
-                <div class="metric-value">3/5</div>
-              </div>
-              <div class="metric">
-                <div class="metric-label">Confidence Score</div>
-                <div class="metric-value">92%</div>
+              <div class="metric-card">
+                <div class="metric-icon">
+                  <i class="bi bi-shield-check"></i>
+                </div>
+                <div class="metric-info">
+                  <span class="metric-value">92%</span>
+                  <span class="metric-label">Confidence</span>
+                </div>
               </div>
             </div>
           </div>
