--- a/shop.html
+++ b/shop.html
@@ -28,6 +28,7 @@
       height: 100%;
       background: rgba(255, 255, 255, 0.9);
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
       z-index: 1000;
@@ -48,6 +49,58 @@
       border-top: 5px solid #3498db;
       border-radius: 50%;
       animation: spin 1s linear infinite;
+      margin-bottom: 20px;
+    }
+
+    .loader-operations {
+      width: 300px;
+      text-align: left;
+      background: white;
+      border-radius: 8px;
+      padding: 15px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    }
+
+    .loader-operations h4 {
+      margin-top: 0;
+      margin-bottom: 10px;
+      font-size: 16px;
+      color: #333;
+      text-align: center;
+    }
+
+    .operation-list {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+
+    .operation-item {
+      padding: 8px 0;
+      border-bottom: 1px solid #eee;
+      display: flex;
+      align-items: center;
+    }
+
+    .operation-item:last-child {
+      border-bottom: none;
+    }
+
+    .operation-status {
+      margin-right: 10px;
+      font-size: 14px;
+    }
+
+    .operation-status.pending {
+      color: #f39c12;
+    }
+
+    .operation-status.complete {
+      color: #2ecc71;
+    }
+
+    .operation-text {
+      font-size: 14px;
     }
 
     @keyframes spin {
@@ -61,9 +114,30 @@
   </style>
 </head>
 <body>
-  <!-- Add global loader -->
+  <!-- Add global loader with operations list -->
   <div id="global-loader" class="loader-overlay">
     <div class="loader-spinner"></div>
+    <div class="loader-operations">
+      <h4>Loading Operations</h4>
+      <ul class="operation-list" id="loader-operation-list">
+        <li class="operation-item">
+          <span class="operation-status pending"><i class="bi bi-hourglass-split"></i></span>
+          <span class="operation-text">Initializing application...</span>
+        </li>
+        <li class="operation-item">
+          <span class="operation-status pending"><i class="bi bi-hourglass-split"></i></span>
+          <span class="operation-text">Loading shop data...</span>
+        </li>
+        <li class="operation-item">
+          <span class="operation-status pending"><i class="bi bi-hourglass-split"></i></span>
+          <span class="operation-text">Preparing tables...</span>
+        </li>
+        <li class="operation-item">
+          <span class="operation-status pending"><i class="bi bi-hourglass-split"></i></span>
+          <span class="operation-text">Configuring filters...</span>
+        </li>
+      </ul>
+    </div>
   </div>
   
   <div class="wrapper">
